# gba-dev

./: .gdbinit  CMakeLists.txt  README.md  README.rst  configure.sh  toolchain-gcc.cmake
cmake/: devkitPro.cmake  overrides-gcc.cmake
src/: base.hpp  bits.hpp  input.cpp  input.hpp  isr.cpp  main.cpp  types.hpp
